--- a/main.html
+++ b/main.html
@@ -10,7 +10,25 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+<div class="container">
+        <img src="your-image.jpg" alt="Your Name">
+        <h1>Your Name</h1>
+        <a href="https://www.linkedin.com/in/your-profile" target="_blank">LinkedIn</a>
 
+        <section id="skills">
+            <h2>Skills</h2>
+            <p>List your skills here. For example: JavaScript, HTML, CSS, React, Node.js</p>
+        </section>
+
+        <section id="projects">
+            <h2>Projects</h2>
+            <ul>
+                <li>Project 1: Description of your project.</li>
+                <li>Project 2: Description of your project.</li>
+                <li>Project 3: Description of your project.</li>
+            </ul>
+        </section>
+    </div>
 </body>
 
 </html>
